# rusty-pic

./: .gitignore  .prettierignore  CLI_USAGE.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  LICENSE  PUBLISH.md  PUBLISH_SUCCESS.md  README.md  TODO.md  USAGE_EXAMPLES.md  VITE_PLUGIN_USAGE.md  build-cli-fixed.cjs  build-cli.cjs  build-vite-plugin.cjs  clippy.toml  deny.toml  eslint.config.js  index.html  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml  test-cli.js  test-deployment.html  test-package.js  test-vite-plugin.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.build.json  vite.config.ts  wasm-pack.toml
.github/: DEPLOYMENT_TROUBLESHOOTING.md  NPM_TOKEN_SETUP.md  PAGES_SETUP.md  README.md  WORKFLOWS.md
.github/workflows/: ci.yml  deploy.yml  pages-minimal.yml  pages-simple.yml  publish-on-main.yml  release.yml  security.yml
crates/: .gitkeep
crates/rusty-pic-core/: Cargo.toml  README.md
crates/rusty-pic-core/benches/: avif_optimization_benchmark.rs  compression_benchmarks.rs  jpeg_optimization_benchmark.rs  performance_benchmark.rs  png_optimization_benchmark.rs  webp_optimization_benchmark.rs
crates/rusty-pic-core/examples/: jpeg_optimization_demo.rs
crates/rusty-pic-core/src/: analyzer.rs  compression.rs  formats.rs  lib.rs  performance.rs  smart.rs
crates/rusty-pic-core/tests/: avif_optimization_test.rs  compression_engine_jpeg_test.rs  integration_test.rs  jpeg_optimization_test.rs  performance_test.rs  png_optimization_test.rs.bak  smart_compression_test.rs  webp_optimization_test.rs
crates/rusty-pic-wasm/: Cargo.toml
crates/rusty-pic-wasm/src/: lib.rs
scripts/: build-for-publish.sh
src/: App.tsx  lib.rs  main.tsx
src/__tests__/: memory.test.ts  wasm.test.ts
src/cli/: index.ts
src/components/: Layout.tsx
src/lib/: memory.agent.ts  memory.fs.ts  memory.schema.ts  rusty-pic.js  rusty-pic.ts
src/pages/: API.tsx  CLI.tsx  Demo.tsx  Docs.tsx  Home.tsx  VitePlugin.tsx
src/types/: wasm.d.ts
src/vite-plugin/: example.js  index.d.ts  index.ts  next-loader.js  next.js  webpack.js
tests/.tmp/vite/: index.html  vite.config.ts
tests/.tmp/vite/src/: main.ts
tests/.tmp/webpack/: webpack.config.mjs
tests/.tmp/webpack/src/: index.js
tests/integration/: run-vite-test.mjs  run-webpack-test.mjs
